--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -28,37 +28,67 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-
+        <% if(typeof displayName == 'string' && displayName) { %>
+          <li class="navbar-text"><i class="fa fa-user"></i> Welcome, <%= displayName %></li>
+        <% } %>
         <% if(title == "Home") { %>
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/services">Services</a></li>
+            <li><a href="/connections"> Connections</a></li>
             <li><a href="/contact">Contact</a></li>
         <% } else if(title == "About") {%>
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/services">Services</a></li>
+            <li><a href="/connections"> Connections</a></li>
             <li><a href="/contact">Contact</a></li>
        <% } else if(title == "Projects") {%>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li class="active"><a href="/projects">Projects</a></li>
             <li><a href="/services">Services</a></li>
+            <li><a href="/connections"> Connections</a></li>
             <li><a href="/contact">Contact</a></li>
         <% } else if(title == "Services") {%>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li class="active"><a href="/services">Services</a></li>
+            <li><a href="/connections"> Connections</a></li>
+            <li><a href="/contact">Contact</a></li>
+        <% } else if(title == "Connections") {%>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/services">Services</a></li>
+            <li class="active"><a href="/connections"> Connections</a></li>
             <li><a href="/contact">Contact</a></li>
         <% } else if(title == "Contact") {%>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/services">Services</a></li>
+            <li><a href="/connections"> Connections</a></li>
             <li class="active"><a href="/contact">Contact</a></li>
+        <% } else {%>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/connections"> Connections</a></li>
+            <li><a href="/contact">Contact</a></li>
+        <% }%>
+        <% if(typeof displayName == 'string' && displayName) { %>
+          <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+        <% } else { %>
+          <% if(title == "Login") {%>
+          <li class="active"><a href="/login"><i class="fa fa-sign-in"></i> Login</a></li>
+          <% } else {%>
+          <li><a href="/login"><i class="fa fa-sign-in"></i> Login</a></li>
+          <% }%>
         <% }%>
 
       </ul>
